tests/ui/pattern-match.stderr
error: constant of non-structural type `MyPhantom<u8>` in a pattern
  --> tests/ui/pattern-match.rs:13:9
   |
 6 | #[phantom]
   | ----------
   | |
   | `MyPhantom<u8>` must be annotated with `#[derive(PartialEq)]` to be usable in patterns
   | constant defined here
...
13 |         MyPhantom => {}
   |         ^^^^^^^^^ constant of non-structural type
   |
   = note: see https://doc.rust-lang.org/stable/std/marker/trait.StructuralPartialEq.html for details

error: constant of non-structural type `MyPhantom<u8>` in a pattern
  --> tests/ui/pattern-match.rs:17:9
   |
 6 | #[phantom]
   | ----------
   | |
   | `MyPhantom<u8>` must be annotated with `#[derive(PartialEq)]` to be usable in patterns
   | constant defined here
...
17 |         MyPhantom::<u8> => {}
   |         ^^^^^^^^^^^^^^^ constant of non-structural type
   |
   = note: see https://doc.rust-lang.org/stable/std/marker/trait.StructuralPartialEq.html for details
